--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="about-me">
       <h2>
-        Hi! I'm Emily Crawford
+        Hi! I'm Emily Crawford - This site is a work in progress, check back later!
       </h2>
-      <img class="headshot" src="static/headshot.jpg">
+      <!-- <img class="headshot" src="static/headshot.jpg"> -->
     </div>
     
     <script src="index.js"></script>
